--- a/Vue基础/Vue前端交互/08-FetchAPI参数传递.html
+++ b/Vue基础/Vue前端交互/08-FetchAPI参数传递.html
@@ -1,96 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <title>Document</title>
+    </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
+    <body>
+        <script type="text/javascript">
+            /*
+                Fetch API 调用接口传递参数
+                对于 get 和 delete 方法而言，只需指定 method 即可，参数都是通过 url 来进行传递的
+                text() 方法将返回体处理成字符串的格式
+            */
 
-<body>
-  <script type="text/javascript">
-    /*
-      Fetch API 调用接口传递参数
-      对于 get 和 delete 方法而言，只需指定 method 即可，参数都是通过 url 来进行传递的
-    */
+            // GET参数传递-传统URL
+            fetch('http://localhost:3000/books?id=123', {
+                method: 'get',
+            })
+                .then(function (data) {
+                    return data.text()
+                })
+                .then(function (data) {
+                    console.log(data)
+                })
 
-    // GET参数传递-传统URL
-    // fetch('http://localhost:3000/books?id=123', {
-    //   method: 'get'
-    // })
-    //   .then(function(data){
-    //     return data.text();
-    //   }).then(function(data){
-    //     console.log(data)
-    //   });
+            // GET参数传递-restful形式的URL
+            fetch('http://localhost:3000/books/456', {
+                method: 'get',
+            })
+                .then(function (data) {
+                    return data.text()
+                })
+                .then(function (data) {
+                    console.log(data)
+                })
 
-    // GET参数传递-restful形式的URL
-    // fetch('http://localhost:3000/books/456', {
-    //   method: 'get'
-    // })
-    //   .then(function(data){
-    //     return data.text();
-    //   }).then(function(data){
-    //     console.log(data)
-    //   });
+            // DELETE请求方式参数传递
+            fetch('http://localhost:3000/books/789', {
+                method: 'delete',
+            })
+                .then(function (data) {
+                    return data.text()
+                })
+                .then(function (data) {
+                    console.log(data)
+                })
 
-    // DELETE请求方式参数传递
-    // fetch('http://localhost:3000/books/789', {
-    //   method: 'delete'
-    // })
-    //   .then(function(data){
-    //     return data.text();
-    //   }).then(function(data){
-    //     console.log(data)
-    //   });
+            // POST请求传参
+            // 指定 method 为 post 指定 body 设置 headers 的形式 urlencoded
+            fetch('http://localhost:3000/books', {
+                method: 'post',
+                body: 'uname=lisi&pwd=123',
+                headers: {
+                    'Content-Type': 'application/x-www-form-urlencoded',
+                },
+            })
+                .then(function (data) {
+                    return data.text()
+                })
+                .then(function (data) {
+                    console.log(data)
+                })
 
-    // POST请求传参
-    // fetch('http://localhost:3000/books', {
-    //   method: 'post',
-    //   body: 'uname=lisi&pwd=123',
-    //   headers: {
-    //     'Content-Type': 'application/x-www-form-urlencoded'
-    //   }
-    // })
-    //   .then(function(data){
-    //     return data.text();
-    //   }).then(function(data){
-    //     console.log(data)
-    //   });
+            // POST请求传参 Json 格式 body 传参
+            fetch('http://localhost:3000/books', {
+                method: 'post',
+                // 传递的时候需要将对象转换成 json 格式的字符串
+                body: JSON.stringify({
+                    uname: '张三',
+                    pwd: '456',
+                }),
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+            })
+                .then(function (data) {
+                    return data.text()
+                })
+                .then(function (data) {
+                    console.log(data)
+                })
 
-    // POST请求传参 Json 格式 body 传参
-    // fetch('http://localhost:3000/books', {
-    //   method: 'post',
-    //   body: JSON.stringify({
-    //     uname: '张三',
-    //     pwd: '456'
-    //   }),
-    //   headers: {
-    //     'Content-Type': 'application/json'
-    //   }
-    // })
-    //   .then(function(data){
-    //     return data.text();
-    //   }).then(function(data){
-    //     console.log(data)
-    //   });
-
-    // PUT请求传参，修改数据
-    fetch('http://localhost:3000/books/123', {
-      method: 'put',
-      body: JSON.stringify({
-        uname: '张三',
-        pwd: '789'
-      }),
-      headers: {
-        'Content-Type': 'application/json'
-      }
-    })
-      .then(function (data) {
-        return data.text();
-      }).then(function (data) {
-        console.log(data)
-      });
-  </script>
-</body>
-
+            // PUT请求传参，修改数据
+            fetch('http://localhost:3000/books/123', {
+                method: 'put',
+                body: JSON.stringify({
+                    uname: '张三',
+                    pwd: '789',
+                }),
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+            })
+                .then(function (data) {
+                    return data.text()
+                })
+                .then(function (data) {
+                    console.log(data)
+                })
+        </script>
+    </body>
 </html>
