--- a/Vue基础/Vue前端交互/11-axios请求传参.html
+++ b/Vue基础/Vue前端交互/11-axios请求传参.html
@@ -1,64 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
-<body>
-  
-  <script type="text/javascript" src="js/axios.js"></script>
-  <script type="text/javascript">
-    /*
-      axios请求参数传递
-    */
-    // axios get请求传参
-    // axios.get('http://localhost:3000/axios?id=123').then(function(ret){
-    //   console.log(ret.data)
-    // })
-    // axios.get('http://localhost:3000/axios/123').then(function(ret){
-    //   console.log(ret.data)
-    // })
-    // axios.get('http://localhost:3000/axios', {
-    //   params: {
-    //     id: 789
-    //   }
-    // }).then(function(ret){
-    //   console.log(ret.data)
-    // })
+    <head>
+        <meta charset="UTF-8" />
+        <title>Document</title>
+    </head>
+    <body>
+        <script type="text/javascript" src="js/axios.js"></script>
+        <script type="text/javascript">
+            /*
+                axios请求参数传递
+                各种传参形式都支持
+                /axios?id=123
+                axios/123
 
-    // axios delete 请求传参
-    // axios.delete('http://localhost:3000/axios', {
-    //   params: {
-    //     id: 111
-    //   }
-    // }).then(function(ret){
-    //   console.log(ret.data)
-    // })
+                get 方法体内使用 params对象传参
+                params: {
+                        id: 789,
+                    },
+            */
+            // axios get请求传参
+            // axios
+            //     .get('http://localhost:3000/axios?id=123')
+            //     .then(function (ret) {
+            //         console.log(ret.data)
+            //     })
+            // axios.get('http://localhost:3000/axios/123').then(function (ret) {
+            //     console.log(ret.data)
+            // })
+            // axios
+            //     .get('http://localhost:3000/axios', {
+            //         params: {
+            //             id: 789,
+            //         },
+            //     })
+            //     .then(function (ret) {
+            //         console.log(ret.data)
+            //     })
 
-    // axios.post('http://localhost:3000/axios', {
-      // 默认是 JSON 格式的数据
-    //   uname: 'lisi',
-    //   pwd: 123
-    // }).then(function(ret){
-    //   console.log(ret.data)
-    // })
-    // var params = new URLSearchParams();
-    // params.append('uname', 'zhangsan');
-    // params.append('pwd', '111');
-    // axios.post('http://localhost:3000/axios', params).then(function(ret){
-    //   console.log(ret.data)
-    // })
+            // // axios delete 请求传参
+            // axios
+            //     .delete('http://localhost:3000/axios', {
+            //         params: {
+            //             id: 111,
+            //         },
+            //     })
+            //     .then(function (ret) {
+            //         console.log(ret.data)
+            //     })
 
-    // axios put 请求传参
-    axios.put('http://localhost:3000/axios/123', {
-      uname: 'lisi',
-      pwd: 123
-    }).then(function(ret){
-      console.log(ret.data)
-    })
+            // axios
+            //     .post('http://localhost:3000/axios', {
+            //         // 通过选项的方式传递 post 参数, 默认就是 json 格式的数据
+            //         //   默认是 JSON 格式的数据
+            //         uname: 'lisi',
+            //         pwd: 123,
+            //     })
+            //     .then(function (ret) {
+            //         console.log(ret.data)
+            //     })
 
-    
+            // 使用传统方法 urlencoded
+            var params = new URLSearchParams()
+            params.append('uname', 'zhangsan')
+            params.append('pwd', '111')
+            // 将 URLSearchParams 的实例作为 post 方法的第二个参数传入
+            axios
+                .post('http://localhost:3000/axios', params)
+                .then(function (ret) {
+                    console.log(ret.data)
+                })
 
-  </script>
-</body>
+            // axios put 请求传参
+            // axios
+            //     .put('http://localhost:3000/axios/123', {
+            //         uname: 'lisi',
+            //         pwd: 123,
+            //     })
+            //     .then(function (ret) {
+            //         console.log(ret.data)
+            //     })
+        </script>
+    </body>
 </html>
