--- a/Vue基础/Vue前端交互/12-axios响应结果与全局配置.html
+++ b/Vue基础/Vue前端交互/12-axios响应结果与全局配置.html
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <title>Document</title>
+    </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
+    <body>
+        <script type="text/javascript" src="js/axios.js"></script>
+        <script type="text/javascript">
+            /*
+                axios 响应结果与全局配置
+            */
+            // axios.get('http://localhost:3000/axios-json').then(function(ret){
+            //   console.log(ret.data.uname)
+            // })
 
-<body>
-
-  <script type="text/javascript" src="js/axios.js"></script>
-  <script type="text/javascript">
-    /*
-      axios 响应结果与全局配置
-    */
-    // axios.get('http://localhost:3000/axios-json').then(function(ret){
-    //   console.log(ret.data.uname)
-    // })
-
-    // 配置请求的基准URL地址
-    axios.defaults.baseURL = 'http://localhost:3000/';
-    // 配置请求头信息
-    axios.defaults.headers['mytoken'] = 'hello';
-    axios.get('axios-json').then(function (ret) {
-      console.log(ret.data.uname)
-    })
-
-
-  </script>
-</body>
-
+            // 配置请求的基准URL地址
+            axios.defaults.baseURL = 'http://localhost:3000/'
+            // 配置请求头信息, 跨域, 需要后台接受
+            axios.defaults.headers['mytoken'] = 'hello'
+            axios.get('axios-json').then(function (ret) {
+                // data 属于 axios API 的一部分, 是固定的
+                console.log(ret.data.uname)
+            })
+        </script>
+    </body>
 </html>
