--- a/Vue基础/Vue前端交互/14-async函数基本用法.html
+++ b/Vue基础/Vue前端交互/14-async函数基本用法.html
@@ -1,41 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
-<body>
-  
-  <script type="text/javascript" src="js/axios.js"></script>
-  <script type="text/javascript">
-    /*
-      async/await 处理异步操作：
-      async函数返回一个Promise实例对象
-      await后面可以直接跟一个 Promise实例对象
-    */
-    axios.defaults.baseURL = 'http:localhost:3000';
-    // axios.get('adata').then(function(ret){
-    //   console.log(ret.data)
-    // })
+    <head>
+        <meta charset="UTF-8" />
+        <title>Document</title>
+    </head>
+    <body>
+        <script type="text/javascript" src="js/axios.js"></script>
+        <script type="text/javascript">
+            /*
+                async/await 处理异步操作：
+                async 函数返回一个Promise实例对象, 可以接着调用 then 方法进行相应的逻辑处理
+                await 后面可以直接跟一个 Promise 实例对象
+            */
+            axios.defaults.baseURL = 'http:localhost:3000'
+            axios.get('adata').then(function (ret) {
+                console.log(ret.data)
+            })
 
-    // async function queryData() {
-    //   var ret = await axios.get('adata');
-    //   // console.log(ret.data)
-    //   return ret.data;
-    // }
+            async function queryData() {
+                // 由于 axios.get 方法返回的是一个 Promise 对象, 因此可以直接使用 await
+                var ret = await axios.get('adata')
+                // console.log(ret.data)
+                return ret.data
 
-    async function queryData() {
-      var ret = await new Promise(function(resolve, reject){
-        setTimeout(function(){
-          resolve('nihao')
-        },1000);
-      })
-      // console.log(ret.data)
-      return ret;
-    }
-    queryData().then(function(data){
-      console.log(data)
-    })
-  </script>
-</body>
+            }
+
+            async function queryData() {
+                var ret = await new Promise(function (resolve, reject) {
+                    setTimeout(function () {
+                        resolve('nihao')
+                    }, 1000)
+                })
+                // console.log(ret.data)
+                return ret
+            }
+            queryData().then(function (data) {
+                console.log(data)
+            })
+        </script>
+    </body>
 </html>
