完成 Vue 模板语法的复习

--- a/Vue基础/Vue模板语法/01-hello world.html
+++ b/Vue基础/Vue模板语法/01-hello world.html
@@ -24,13 +24,12 @@
             // 3、使用 vue 的语法做功能
             // 4、把 vue 提供的数据填充到标签上
             var vm = new Vue({
-                // el: 数据挂载点，把数据关联到页面的某个标签上（CSS选择器）
-                // data：数据
-                // {{}} 插值表达式
+                // el: 数据挂载点, 把数据关联到页面的某个标签上(通常是 CSS 选择器)
+                // data: 数据
                 el: '#app',
                 data: {
                     msg: 'Hello World',
-                },
+                }
             })
         </script>
     </body>
