--- a/Vue基础/Vue模板语法/05-双向数据绑定.html
+++ b/Vue基础/Vue模板语法/05-双向数据绑定.html
@@ -15,7 +15,7 @@
         <script type="text/javascript" src="js/vue.js"></script>
         <script type="text/javascript">
             /*
-            v-model='msg'  绑定一个插值表达式
+            v-model='msg'  将 input 的 value 绑定在一个定义在 data 中的变量 msg
             双向数据绑定：交互
             用户更改页面内容数据发生改变
             数据发生改变, 用户的页面内容改变
