--- a/Vue基础/Vue模板语法/12-属性绑定基本用法.html
+++ b/Vue基础/Vue模板语法/12-属性绑定基本用法.html
@@ -16,6 +16,7 @@
         <script type="text/javascript">
             /*
             属性绑定: v-bind + 属性名，动态修改属性值，简写形式： ':'
+            属性值需要在 data 中注册, 例如: url 在 data中注册了
             */
             var vm = new Vue({
                 el: '#app',
