--- a/Vue基础/Vue模板语法/15-样式绑定之class绑定数组用法.html
+++ b/Vue基础/Vue模板语法/15-样式绑定之class绑定数组用法.html
@@ -22,7 +22,8 @@
         <script type="text/javascript" src="js/vue.js"></script>
         <script type="text/javascript">
             /*
-            样式绑定*/
+            样式绑定: 数组写法
+            */
             var vm = new Vue({
                 el: '#app',
                 data: {
