--- a/Vue基础/Vue模板语法/16-样式绑定之class绑定3个细节用法.html
+++ b/Vue基础/Vue模板语法/16-样式绑定之class绑定3个细节用法.html
@@ -32,8 +32,9 @@
             </div>
             <div v-bind:class="arrClasses"></div>
             <div v-bind:class="objClasses"></div>
-            <!-- class v-bind:class 可以并存，而且默认的 class 不会被覆盖 -->
-            <!-- class 和 v-bind:class 可以并存, 而且默认的 class 不会被覆盖 -->
+            <!-- class 和 v-bind:class 可以并存, 而且默认的 class 不会被覆盖
+                class 不变的部分, v-bind:class 需要变动的部分
+            -->
             <div class="base" v-bind:class="objClasses"></div>
 
             <button v-on:click="handle">切换</button>
