--- a/Vue基础/Vue模板语法/18-分支结构.html
+++ b/Vue基础/Vue模板语法/18-分支结构.html
@@ -7,7 +7,6 @@
 
     <body>
         <div id="app">
-
             <div v-if="score>=90">优秀</div>
             <div v-else-if="score<90 && score>=80">良好</div>
             <div v-else-if="score<80 && score>60">一般</div>
@@ -24,6 +23,7 @@
             v-show的原理：控制元素样式是否显示 display:none
             v-if：控制元素是否渲染到页面（DOM 中是否存在）
             v-show: DOM 中已经存在，控制是否显示 display: none
+            v-show="false" 就是将 display:none 添加到相应的 DOM 结构中去
 
             v-if: 是否渲染新元素
             v-show: 是否显示(已经在 DOM 中渲染了了)
