--- a/Vue基础/Vue模板语法/20-循环结构-遍历对象.html
+++ b/Vue基础/Vue模板语法/20-循环结构-遍历对象.html
@@ -12,6 +12,9 @@
             <div v-for="(v,k,i) in obj">
                 {{v + '---' + k + '---' + i}}
             </div>
+            <div v-for="(v,k,i) in obj">
+                {{` ${v} --- ${k} --- ${i} `}}
+            </div>
         </div>
         <script type="text/javascript" src="js/vue.js"></script>
         <script type="text/javascript">
