--- a/Vue基础/Vue模板语法/21-选项卡案例 .html
+++ b/Vue基础/Vue模板语法/21-选项卡案例 .html
@@ -53,7 +53,7 @@
         <div id="app">
             <div class="tab">
                 <!-- 选项卡标题 -->
-                <!-- 选中 class 增加 active 属性  -->
+                <!-- 选中的那一项 class 增加 active 属性  -->
                 <ul>
                     <li
                         v-on:click="change(index)"
