开始 Vue 常用特性的学习

--- a/Vue基础/Vue模板语法/05-双向数据绑定.html
+++ b/Vue基础/Vue模板语法/05-双向数据绑定.html
@@ -19,8 +19,8 @@
             双向数据绑定：交互
             用户更改页面内容数据发生改变
             数据发生改变, 用户的页面内容改变
-            1、从页面到数据，数据 =》页面
-            2、从数据到页面，页面 =》数据
+            1、从页面到数据，模型 =》页面
+            2、从数据到页面，页面 =》模型
 
             双向绑定：表单输入域
             v-model 指令用在表单 <input> <textarea> 以及 <select> 元素上创建双向数据绑定
