--- a/Vue基础/Vue模板语法/14-样式绑定之class绑定对象用法.html
+++ b/Vue基础/Vue模板语法/14-样式绑定之class绑定对象用法.html
@@ -19,7 +19,7 @@
     <body>
         <div id="app">
             <!-- 对象形式
-    类名:属性（控制类名显示的开关, 其实就是控制类名是否添加到 class 属性上） -->
+    类名:data 中定义的变量(flag)（控制类名显示的开关, 其实就是控制类名是否添加到 class 属性上） -->
 
             <div v-bind:class="{active: isActive, error: isError}">
                 测试样式
