--- a/Vue基础/Vue模板语法/15-样式绑定之class绑定数组用法.html
+++ b/Vue基础/Vue模板语法/15-样式绑定之class绑定数组用法.html
@@ -27,6 +27,7 @@
             var vm = new Vue({
                 el: '#app',
                 data: {
+                    // 将类名包装一下, 变成 Vue 中 data 的变量
                     activeClass: 'active',
                     errorClass: 'error',
                 },
