--- a/Vue基础/Vue模板语法/16-样式绑定之class绑定3个细节用法.html
+++ b/Vue基础/Vue模板语法/16-样式绑定之class绑定3个细节用法.html
@@ -45,7 +45,8 @@
             样式绑定相关语法细节：
             1、对象绑定和数组绑定可以结合使用
             2、class绑定的值可以简化操作, 在 data 中定义好对应的 Array 或 Object v-bind:class="arrClasses/objClasses"
-            3、默认的class如何处理？默认的class会保留
+            3、默认的class如何处理？
+                默认的class会保留
             */
             var vm = new Vue({
                 el: '#app',
