--- a/Vue基础/Vue模板语法/07-事件函数传参.html
+++ b/Vue基础/Vue模板语法/07-事件函数传参.html
@@ -17,6 +17,8 @@
                     $event: 事件对象的名称，并且事件对象必须放在最后一个
                 -->
                 <button v-on:click="handle2(123, 456, $event)">点击2</button>
+                <!-- 加了括号, 要想使用 $event 就必须显式的传入 $event -->
+                <button v-on:click="handle3($event)">点击3</button>
             </div>
         </div>
         <script type="text/javascript" src="js/vue.js"></script>
@@ -33,6 +35,10 @@
                     },
                     handle2: function (p, p1, event) {
                         console.log(p, p1)
+                        console.log(event.target.innerHTML)
+                        this.num++
+                    },
+                    handle3: function (event) {
                         console.log(event.target.innerHTML)
                         this.num++
                     },
