完成 Vue 常用特性的复习

--- a/Vue基础/Vue 常用特性/08-侦听器基本用法.html
+++ b/Vue基础/Vue 常用特性/08-侦听器基本用法.html
@@ -50,6 +50,7 @@
                 //     this.fullName = this.firstName + ' ' + val;
                 //   }
                 // }
+                // v-model 绑定的 data 中的数据与 watch 的方法名要一致
                 watch: {
                     firstName: function (val) {
                         this.fullName = val + '  ' + this.lastName
