--- a/Vue基础/Vue 常用特性/01-表单基本操作.html
+++ b/Vue基础/Vue 常用特性/01-表单基本操作.html
@@ -30,6 +30,7 @@
                         <input type="text" v-model="uname" />
                     </span>
                 </div>
+                <!-- 单选框 v-model 和 value 值要一致 -->
                 <div>
                     <span>性别：</span>
                     <span>
@@ -75,6 +76,7 @@
                     />
                     <label for="code">写代码</label>
                 </div>
+
                 <div>
                     <span>职业：</span>
                     <!-- v-model 写在 select 元素上, 但绑定的是 option 的 value 属性 -->
@@ -105,7 +107,7 @@
                 el: '#app',
                 data: {
                     uname: 'lisi',
-                    gender: 2,
+                    gender: 1,
                     // 多选对应的是一个数组
                     hobby: ['2', '3'],
                     // occupation: 3
