--- a/Vue基础/Vue 常用特性/02-表单域修饰符用法.html
+++ b/Vue基础/Vue 常用特性/02-表单域修饰符用法.html
@@ -34,8 +34,8 @@
                 },
                 methods: {
                     handle: function () {
-                        // console.log(this.age + 13)
-                        // console.log(this.info.length)
+                        console.log(this.age + 13)
+                        console.log(this.info.length)
                     },
                 },
             })
