完成了vue组件化开发的复习

--- a/Vue基础/Vue 常用特性/10-过滤器基本用法.html
+++ b/Vue基础/Vue 常用特性/10-过滤器基本用法.html
@@ -19,7 +19,7 @@
         <script type="text/javascript">
             /*
             过滤器
-            1、可以用与插值表达式和属性绑定
+            1、可以用于 插值表达式 和 属性绑定(属性值使用过滤器)
             2、支持级联操作，使用多个过滤器
 
             文本格式化
