--- a/Vue基础/Vue模板语法/02-指令v-cloak的用法.html
+++ b/Vue基础/Vue模板语法/02-指令v-cloak的用法.html
@@ -13,8 +13,10 @@
 
     <body>
         <div id="app">
-            <div v-cloak>
+            <!-- v-cloak 指令本质上就是自定义属性, 直接用在标签上就好了 -->
+            <div v-cloak='true'>
                 {{ msg }}
+                {{ 1 + 2 + 3 }}
             </div>
         </div>
         <script src="./js/vue.js"></script>
@@ -24,7 +26,7 @@
             解决插值表达式 {{}} 带来的闪动问题
             1、提供样式
             2、在插值表达式所在的标签中条件 v-cloak 指令的用法
-            3、指令的本质实际上就是自定义属性
+            3、指令的本质实际上就是自定义属性，指令本质上就是自定义属性，直接用在标签上就好了。
 
             背后的原理：先通过样式隐藏内容，然后在内存中进行值的替换，替换好之后再显示最终的结果
             */
