--- a/Vue基础/Vue模板语法/04-指令v-once的用法.html
+++ b/Vue基础/Vue模板语法/04-指令v-once的用法.html
@@ -9,7 +9,7 @@
         <div id="app">
             <div>{{msg}}</div>
             <!--
-                v-once: 显示内容之后不再具有响应式功能
+                v-once: 显示内容之后不再具有响应式功能, 在 console 后台修改对应的数据项, 无法反映在页面变化上
                 应用场景: 显示的内容以后无需修改, 可以使用 v-once 提高性能
             -->
             <div v-once>{{info}}</div>
