--- a/Vue基础/Vue模板语法/05-双向数据绑定.html
+++ b/Vue基础/Vue模板语法/05-双向数据绑定.html
@@ -15,10 +15,12 @@
         <script type="text/javascript" src="js/vue.js"></script>
         <script type="text/javascript">
             /*
-            v-model='msg'  将 input 的 value 绑定在一个定义在 data 中的变量 msg
+            v-model='msg'  将 input 的 value 属性值绑定在一个定义在 data 中的变量 msg
+
             双向数据绑定：交互
             用户更改页面内容数据发生改变
             数据发生改变, 用户的页面内容改变
+
             1、从页面到数据，模型 =》页面
             2、从数据到页面，页面 =》模型
 
