--- a/Vue基础/Vue模板语法/06-事件基本用法.html
+++ b/Vue基础/Vue模板语法/06-事件基本用法.html
@@ -10,6 +10,7 @@
             <div>{{num}}</div>
             <div>
                 <!-- 直接对 data 中的变量 num 进行运算 -->
+                <!-- v-on:click 里面直接写 js 逻辑 -->
                 <button v-on:click="num++">点击</button>
                 <!-- @ 是 v-on: 的缩写 @click 就是 v-on:click -->
                 <button @click="num++">点击1</button>
