--- a/Vue基础/Vue模板语法/14-样式绑定之class绑定对象用法.html
+++ b/Vue基础/Vue模板语法/14-样式绑定之class绑定对象用法.html
@@ -33,6 +33,7 @@
             var vm = new Vue({
                 el: '#app',
                 data: {
+                    // 控制阀
                     isActive: true,
                     isError: true,
                 },
