--- a/Vue基础/Vue组件化开发/19-购物车案例-完成列表组件更新商品数量-下.html
+++ b/Vue基础/Vue组件化开发/19-购物车案例-完成列表组件更新商品数量-下.html
@@ -72,7 +72,7 @@
                 font-size: 20px;
                 width: 30px;
                 text-decoration: none;
-                background-color: lightgray;
+                background-color: rgb(211, 211, 211);
                 vertical-align: middle;
             }
 
