--- a/Vue基础/Vue 常用特性/14-动态响应式数据处理.html
+++ b/Vue基础/Vue 常用特性/14-动态响应式数据处理.html
@@ -19,7 +19,7 @@
         <script type="text/javascript" src="js/vue.js"></script>
         <script type="text/javascript">
             /*
-            动态处理响应式数据
+            动态处理响应式数据(数组)
             */
             var vm = new Vue({
                 el: '#app',
@@ -34,12 +34,13 @@
             // vm.list[1] = 'lemon'; 使用索引修改的数组数据不是响应式的(不会立即更新页面)
             // Vue.set(vm.list, 2, 'lemon');
             // vm.$set(vm.list, 1, 'lemon')
-            // 目标 索引 新值
+            // 目标 索引 新值, 取代传统的使用索引来修改数组数据, 响应式, 立即更新页面
             vm.$set(vm.list, 1, 'lemon')
 
             // vm.info.gender = 'male'; 非数据响应式
             // 目标 属性名 新值
             vm.$set(vm.info, 'gender', 'female')
+            vm.$set(vm.info, 'age', '15')
         </script>
     </body>
 </html>
