--- a/Vue基础/Vue 常用特性/17-图书管理案例-修改图书.html
+++ b/Vue基础/Vue 常用特性/17-图书管理案例-修改图书.html
@@ -38,24 +38,10 @@
                     <h1>图书管理</h1>
                     <div class="book">
                         <div>
-                            <label for="id">
-                                编号：
-                            </label>
-                            <input
-                                type="text"
-                                id="id"
-                                v-model="id"
-                                :disabled="flag"
-                            />
-                            <label for="name">
-                                名称：
-                            </label>
-                            <input
-                                type="text"
-                                id="name"
-                                v-model="name"
-                                @keyup.enter="submit"
-                            />
+                            <label for="id">编号：</label>
+                            <input type="text" id="id" v-model="id" :disabled="flag" />
+                            <label for="name"> 名称：</label>
+                            <input type="text" id="name" v-model="name" @keyup.enter="submit" />
                             <!-- 复用 handle 函数 -->
                             <button @click="handle">提交</button>
                         </div>
@@ -78,9 +64,7 @@
                             <td>
                                 <!-- 最重要的是确认, 我们要编辑哪条数据, 因此需要传入 item.id 数据 -->
                                 <!-- item.id 在更新图书数据时不允许编辑 -->
-                                <a href="" @click.prevent="toEdit(item.id)"
-                                    >修改</a
-                                >
+                                <a href="" @click.prevent="toEdit(item.id)">修改</a>
                                 <span>|</span>
                                 <a href="" @click.prevent>删除</a>
                             </td>
@@ -127,7 +111,7 @@
                     handle: function () {
                         if (this.flag) {
                             // 编辑图书
-                            // 就是根据当前的ID去更新数组中对应的数据
+                            // 就是根据当前的 ID 去更新数组中对应的数据
                             this.books.some((item) => {
                                 // 箭头函数的 this 就是父级作用域的 this 也就是 handle 的 this vm
                                 // vm.id vm.name 获取到 v-model 绑定的 input 的输入值(value)
