--- a/Vue基础/Vue 常用特性/19-图书管理案例-常用特性应用场景.html
+++ b/Vue基础/Vue 常用特性/19-图书管理案例-常用特性应用场景.html
@@ -48,13 +48,7 @@
                                 编号：
                             </label>
                             <!-- 自定义属性 v-focus 自动获取焦点 -->
-                            <input
-                                type="text"
-                                id="id"
-                                v-model="id"
-                                :disabled="flag"
-                                v-focus
-                            />
+                            <input type="text" id="id" v-model="id" :disabled="flag" v-focus />
                             <label for="name">
                                 名称：
                             </label>
@@ -87,13 +81,9 @@
                                 {{item.date | format('yyyy-MM-dd hh:mm:ss')}}
                             </td>
                             <td>
-                                <a href="" @click.prevent="toEdit(item.id)"
-                                    >修改</a
-                                >
+                                <a href="" @click.prevent="toEdit(item.id)">修改</a>
                                 <span>|</span>
-                                <a href="" @click.prevent="deleteBook(item.id)"
-                                    >删除</a
-                                >
+                                <a href="" @click.prevent="deleteBook(item.id)">删除</a>
                             </td>
                         </tr>
                     </tbody>
@@ -132,10 +122,7 @@
                         q: Math.floor((date.getMonth() + 3) / 3), //季度
                         S: date.getMilliseconds(), //毫秒
                     }
-                    format = format.replace(/([yMdhmsqS])+/g, function (
-                        all,
-                        t
-                    ) {
+                    format = format.replace(/([yMdhmsqS])+/g, function (all, t) {
                         var v = map[t]
                         if (v !== undefined) {
                             if (all.length > 1) {
@@ -144,9 +131,7 @@
                             }
                             return v
                         } else if (t === 'y') {
-                            return (date.getFullYear() + '').substr(
-                                4 - all.length
-                            )
+                            return (date.getFullYear() + '').substr(4 - all.length)
                         }
                         return all
                     })
@@ -216,7 +201,6 @@
                     },
                 },
 
-
                 // 使用计算属性, 统计图书总数
                 computed: {
                     total: function () {
@@ -242,7 +226,6 @@
                         }
                     },
                 },
-
 
                 mounted: function () {
                     // 该生命周期钩子函数被触发的时候，模板已经可以使用
