--- a/Vue基础/Vue模板语法/16-样式绑定之class绑定3个细节用法.html
+++ b/Vue基础/Vue模板语法/16-样式绑定之class绑定3个细节用法.html
@@ -32,6 +32,7 @@
             </div>
             <div v-bind:class="arrClasses"></div>
             <div v-bind:class="objClasses"></div>
+
             <!-- class 和 v-bind:class 可以并存, 而且默认的 class 不会被覆盖
                 class 不变的部分, v-bind:class 需要变动的部分
             -->
@@ -54,7 +55,12 @@
                     activeClass: 'active',
                     errorClass: 'error',
                     isTest: true,
+                    // arrClasses: ['active', 'error'],
                     arrClasses: ['active', 'error'],
+                    // objClasses: {
+                    //     active: true,
+                    //     error: true,
+                    // },
                     objClasses: {
                         active: true,
                         error: true,
