--- a/Vue基础/Vue组件化开发/04-局部组件用法.html
+++ b/Vue基础/Vue组件化开发/04-局部组件用法.html
@@ -1,61 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <title>Document</title>
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
 
-    <body>
-        <div id="app">
-            <hello-world></hello-world>
-            <hello-tom></hello-tom>
-            <hello-jerry></hello-jerry>
-            <test-com></test-com>
-        </div>
-        <script type="text/javascript" src="js/vue.js"></script>
-        <script type="text/javascript">
-            /*
+  <body>
+    <div id="app">
+      <hello-world></hello-world>
+      <hello-tom></hello-tom>
+      <hello-jerry></hello-jerry>
+      <hello-sam></hello-sam>
+      <test-com></test-com>
+    </div>
+    <script type="text/javascript" src="js/vue.js"></script>
+    <script type="text/javascript">
+      /*
             局部组件注册
             局部组件只能在注册他的父组件中使用
     */
-            Vue.component('test-com', {
-                template: '<div>Test<hello-world></hello-world></div>',
-            })
-            // 使用对象的方式定义组件骨架
-            var HelloWorld = {
-                data: function () {
-                    return {
-                        msg: 'HelloWorld',
-                    }
-                },
-                template: '<div>{{msg}}</div>',
-            }
-            var HelloTom = {
-                data: function () {
-                    return {
-                        msg: 'HelloTom',
-                    }
-                },
-                template: '<div>{{msg}}</div>',
-            }
-            var HelloJerry = {
-                data: function () {
-                    return {
-                        msg: 'HelloJerry',
-                    }
-                },
-                template: '<div>{{msg}}</div>',
-            }
-            var vm = new Vue({
-                el: '#app',
-                data: {},
-                // components 局部组件定义的地方
-                components: {
-                    'hello-world': HelloWorld,
-                    'hello-tom': HelloTom,
-                    'hello-jerry': HelloJerry,
-                },
-            })
-        </script>
-    </body>
+      Vue.component('test-com', {
+        // hello-world 组件没有被注册, 不能在此组件内使用
+        template: '<div>Test<hello-world></hello-world></div>',
+      })
+      // 使用对象的方式定义组件骨架
+      var HelloSam = {
+        data: function () {
+          return {
+            msg: 'HelloSam',
+          }
+        },
+        template: `<div>{{msg}}</div>`,
+      }
+      var HelloWorld = {
+        data: function () {
+          return {
+            msg: 'HelloWorld',
+          }
+        },
+        template: '<div>{{msg}}</div>',
+      }
+      var HelloTom = {
+        data: function () {
+          return {
+            msg: 'HelloTom',
+          }
+        },
+        template: '<div>{{msg}}</div>',
+      }
+      var HelloJerry = {
+        data: function () {
+          return {
+            msg: 'HelloJerry',
+          }
+        },
+        template: '<div>{{msg}}</div>',
+      }
+      var vm = new Vue({
+        el: '#app',
+        data: {},
+        // components 局部组件注册的地方, 局部组件只能在被注册的地方使用
+        components: {
+          'hello-world': HelloWorld,
+          'hello-tom': HelloTom,
+          'hello-jerry': HelloJerry,
+          'hello-sam': HelloSam,
+        },
+      })
+    </script>
+  </body>
 </html>
