--- a/Vue基础/Vue组件化开发/13-具名插槽用法.html
+++ b/Vue基础/Vue组件化开发/13-具名插槽用法.html
@@ -1,41 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <title>Document</title>
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
 
-    <body>
-        <div id="app">
-            <base-layout>
-                <!-- 填充一条文本 -->
-                <p slot="header">标题信息</p>
-                <p>主要内容1</p>
-                <p>主要内容2</p>
-                <p slot="footer">底部信息信息</p>
-            </base-layout>
+  <body>
+    <div id="app">
+      <base-layout>
+        <!-- 填充一条文本 -->
+        <p slot="header">标题信息</p>
+        <p>主要内容1</p>
+        <p>主要内容2</p>
+        <p slot="footer">底部信息信息</p>
+      </base-layout>
 
-            <base-layout>
-                <!-- 同时把多行文本填充到 slot 中 -->
-                <template slot="header">
-                    <p>标题信息1</p>
-                    <p>标题信息2</p>
-                </template>
-                <p>主要内容1</p>
-                <p>主要内容2</p>
-                <template slot="footer">
-                    <p>底部信息信息1</p>
-                    <p>底部信息信息2</p>
-                </template>
-            </base-layout>
-        </div>
-        <script type="text/javascript" src="js/vue.js"></script>
-        <script type="text/javascript">
-            /*
+      <base-layout>
+        <!-- 同时把多行文本填充到 slot 中 -->
+        <!-- 使用 template 包裹 -->
+        <template slot="header">
+          <p>标题信息1</p>
+          <p>标题信息2</p>
+        </template>
+        <p>主要内容1</p>
+        <p>主要内容2</p>
+        <template slot="footer">
+          <p>底部信息信息1</p>
+          <p>底部信息信息2</p>
+        </template>
+      </base-layout>
+    </div>
+    <script type="text/javascript" src="js/vue.js"></script>
+    <script type="text/javascript">
+      /*
             具名插槽 占位符
     */
-            Vue.component('base-layout', {
-                template: `
+      Vue.component('base-layout', {
+        template: `
         <div>
           <header>
             <slot name='header'></slot>
@@ -48,11 +49,11 @@
           </footer>
         </div>
       `,
-            })
-            var vm = new Vue({
-                el: '#app',
-                data: {},
-            })
-        </script>
-    </body>
+      })
+      var vm = new Vue({
+        el: '#app',
+        data: {},
+      })
+    </script>
+  </body>
 </html>
