--- a/Vue基础/Vue前端路由/05.动态路由匹配1.html
+++ b/Vue基础/Vue前端路由/05.动态路由匹配1.html
@@ -1,58 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Document</title>
-        <!-- 导入 vue 文件 -->
-        <script src="./lib/vue_2.5.22.js"></script>
-        <script src="./lib/vue-router_3.0.2.js"></script>
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+    <!-- 导入 vue 文件 -->
+    <script src="./lib/vue_2.5.22.js"></script>
+    <script src="./lib/vue-router_3.0.2.js"></script>
+  </head>
 
-    <body>
-        <!-- 被 vm 实例所控制的区域 -->
-        <div id="app">
-            <router-link to="/user/1">User1</router-link>
-            <router-link to="/user/2">User2</router-link>
-            <router-link to="/user/3">User3</router-link>
-            <router-link to="/register">Register</router-link>
+  <body>
+    <!-- 被 vm 实例所控制的区域 -->
+    <div id="app">
+      <router-link to="/user/1">User1</router-link>
+      <router-link to="/user/2">User2</router-link>
+      <router-link to="/user/3">User3</router-link>
+      <router-link to="/register">Register</router-link>
 
-            <!-- 路由占位符 -->
+      <!-- 路由占位符 -->
 
-            <router-view></router-view>
-        </div>
+      <router-view></router-view>
+    </div>
 
-        <script>
-            const User = {
-                template:
-                    '<h1>User 组件 -- 用户id为: {{this.$route.params.id}}</h1>',
-            }
+    <script>
+      const User = {
+        // 通过 $route.params 访问路由参数对象
+        template: '<h1>User 组件 -- 用户id为: {{this.$route.params.id}}</h1>',
+      }
 
-            const Register = {
-                template: '<h1>Register 组件</h1>',
-            }
+      const Register = {
+        template: '<h1>Register 组件</h1>',
+      }
 
-            // 创建路由实例对象
-            const router = new VueRouter({
-                // 所有的路由规则
-                routes: [
-                    { path: '/', redirect: '/user' },
-                    // 动态路由参数，以冒号开头, 路由通用部分 + 路由动态部分(路由参数)
-                    { path: '/user/:id', component: User },
-                    { path: '/register', component: Register },
-                ],
-            })
+      // 创建路由实例对象
+      const router = new VueRouter({
+        // 所有的路由规则
+        routes: [
+          { path: '/', redirect: '/user' },
+          // 动态路由参数，以冒号开头, 路由通用部分 + 路由动态部分(路由参数)
+          { path: '/user/:id', component: User },
+          { path: '/register', component: Register },
+        ],
+      })
 
-            // 创建 vm 实例对象
-            const vm = new Vue({
-                // 指定控制的区域
-                el: '#app',
-                data: {},
-                // 挂载路由实例对象
-                // router: router
-                router,
-            })
-        </script>
-    </body>
+      // 创建 vm 实例对象
+      const vm = new Vue({
+        // 指定控制的区域
+        el: '#app',
+        data: {},
+        // 挂载路由实例对象
+        // router: router
+        router,
+      })
+    </script>
+  </body>
 </html>
